# bookery

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: unittest.yml
BOOKERY/: Cargo.toml
BOOKERY/api/: Cargo.toml
BOOKERY/api/docs/: README.md  arch.txt
BOOKERY/api/src/: main.rs  router.rs
BOOKERY/api/src/database/: author.rs  book.rs  costumer.rs  mod.rs  rent.rs  rental.rs
BOOKERY/api/src/handlers/: author.rs  book.rs  costumer.rs  mod.rs  rent.rs  rental.rs
BOOKERY/api/src/migrations/: 0002_create_table_costumer.sql  0003_create_table_rent.sql  0003_create_table_rental.sql
BOOKERY/api/src/structs/: book.rs  costumer.rs  mod.rs  rent.rs
BOOKERY/desktop/: package-lock.json  package.json
BOOKERY/desktop/docs/: README.md  arch.txt
BOOKERY/desktop/src/: index.html  main.js  styles.css  styles.css.map  styles.scss
BOOKERY/desktop/src-tauri/: Cargo.toml  tauri.conf.json
BOOKERY/desktop/src-tauri/src/: main.rs
BOOKERY/shared/: Cargo.toml
BOOKERY/shared/docs/: README.md
BOOKERY/shared/src/structs/: author.rs  mod.rs  rental.rs
BOOKERY/src/: database.rs  main.rs  router.rs
BOOKERY/src/database/: author.rs  book.rs  conn.rs  mod.rs
BOOKERY/src/handlers/: author.rs  book.rs  mod.rs
BOOKERY/src/migrations/: 0001_create_table_book.sql
BOOKERY/src/structs/: author.rs  book.rs  mod.rs
docker/: Dockerfile  DockerfileAPI  docker-compose.yml
docs/: README.md  arch.txt
src/: database.rs  main.rs  router.rs
src/handlers/: author.rs  mod.rs
src/migrations/: 0000_create_table_author.sql
src/structs/: author.rs  mod.rs
