[package]
name = "fist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = "0.7.4"
time = "0.3.36"
tokio = {version = "1.37.0", features = ["full"]}
