[package]
name = "bookery-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "migrate",
  "runtime-tokio",
  "time",
  "uuid",
] }
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
axum-test = "15.0.1"

[profile.release]
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
lto = true
